Fixed and tidied up notebooks and added more visualizations.

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -2,17 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7c45d18b",
+   "id": "cfe2515a",
    "metadata": {},
    "source": [
     "# Modelling\n",
     "\n",
-    "In this section, we will implement Linear Regression and Random Forest Regression to estimate the hourly taxi demand in NYC."
+    "In this section, we will implement Linear Regression and Random Forest Regression to estimate the hourly taxi demand in NYC.\n",
+    "***"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "28b32a58",
+   "id": "ad76d0ff",
    "metadata": {},
    "source": [
     "## Import Libraries"
@@ -21,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 277,
-   "id": "0001affe",
+   "id": "dc797c2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de29cf9a",
+   "id": "8c4011f7",
    "metadata": {},
    "source": [
     "## Split data into training and testing set"
@@ -51,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 353,
-   "id": "16d62fe7",
+   "id": "33bd0798",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 354,
-   "id": "4b39539b",
+   "id": "c259420e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa7658a4",
+   "id": "dcb47514",
    "metadata": {},
    "source": [
     "## Prepare training and testing data for each borough\n",
@@ -87,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 355,
-   "id": "4620a750",
+   "id": "754a5001",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 356,
-   "id": "546dcb11",
+   "id": "3302fae0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 394,
-   "id": "f8a9bc79",
+   "id": "6b5a441a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 358,
-   "id": "dc9b2261",
+   "id": "c9659196",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c51396a",
+   "id": "4daef489",
    "metadata": {},
    "source": [
     "## Train and estimate using Linear Regression model on each borough data\n",
@@ -161,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 384,
-   "id": "de923703",
+   "id": "8fb64421",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 385,
-   "id": "2adfb2ef",
+   "id": "cba45c16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 390,
-   "id": "03056457",
+   "id": "d854785d",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7233f6a2",
+   "id": "9a0b194a",
    "metadata": {},
    "source": [
     "## Train and estimate using Random Forest Regression model on each borough data\n",
@@ -243,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 392,
-   "id": "f71fe63a",
+   "id": "cbf91e66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2f8a89a",
+   "id": "fc29aa7d",
    "metadata": {},
    "source": [
     "Due to the long computation time, we decided to tune the hyperparameter using the entire training data instead of spliting into different boroughs. For 5 boroughs, we need to run $5^2*3^3=675$ iterations (including the 5-fold cv) to find the optimal configurations compared to the $135$ iterations if we were to run the GridSearch on the whole training data set. We will therefore use this result to approximate the optimal configurations for each of the model."
@@ -288,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 396,
-   "id": "1ff2319b",
+   "id": "945667dd",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 379,
-   "id": "f7e825ea",
+   "id": "015b6493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 380,
-   "id": "181d26dc",
+   "id": "c9396568",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "839f8b97",
+   "id": "23ba8b11",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "fbbf925b",
+   "id": "4888768e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "76f53270",
+   "id": "79e329d5",
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 242,
-   "id": "2b8dc3c1",
+   "id": "ec658ce4",
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "1263264e",
+   "id": "7338e002",
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "22e259d2",
+   "id": "1da39208",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": 254,
-   "id": "9e49f588",
+   "id": "33a0cacf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1301,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": 276,
-   "id": "6db62ddb",
+   "id": "2e1dfa8d",
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": 226,
-   "id": "b0e568be",
+   "id": "b7362e34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1348,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "84cf0924",
+   "id": "2766726e",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "46bfdf3b",
+   "id": "93b69d7c",
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": 262,
-   "id": "66281289",
+   "id": "49e8b0bd",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "21e88610",
+   "id": "a697b15d",
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1494,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "d4130a01",
+   "id": "04b744f0",
    "metadata": {},
    "outputs": [
     {
@@ -1528,7 +1529,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "1ffe5537",
+   "id": "df86a665",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1538,7 +1539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb5a9fa2",
+   "id": "eb2454cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1548,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "823e954e",
+   "id": "33d35f6d",
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1584,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "caa4972c",
+   "id": "3ff0c8cc",
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "e1c34383",
+   "id": "e16e8043",
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1637,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "9b9c9992",
+   "id": "c0935d08",
    "metadata": {},
    "outputs": [
     {
@@ -1657,7 +1658,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "a0e09f46",
+   "id": "d30f96e7",
    "metadata": {},
    "outputs": [
     {
@@ -1689,7 +1690,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "2d585db7",
+   "id": "2bd19275",
    "metadata": {},
    "outputs": [
     {
@@ -2710,7 +2711,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "f639dc1a",
+   "id": "9534a384",
    "metadata": {},
    "outputs": [
     {
@@ -2731,7 +2732,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "468f95d8",
+   "id": "e503c4aa",
    "metadata": {},
    "outputs": [
     {
@@ -2752,7 +2753,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "e9efb318",
+   "id": "0e2a0957",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2771,7 +2772,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "c8dfdd77",
+   "id": "23db0481",
    "metadata": {},
    "outputs": [
     {
@@ -2945,7 +2946,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "03276c98",
+   "id": "de44abe8",
    "metadata": {},
    "outputs": [
     {
@@ -3016,7 +3017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df4b83f3",
+   "id": "d315cc0f",
    "metadata": {},
    "outputs": [],
    "source": []
