--- a/notebooks/Weather datascrape.ipynb
+++ b/notebooks/Weather datascrape.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 1,
    "id": "7e88df93",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 2,
    "id": "8df85c22",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 17,
    "id": "98c0cdb1",
    "metadata": {},
    "outputs": [],
@@ -70,43 +70,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
-   "id": "4341e30e",
+   "execution_count": 18,
+   "id": "40110dbd",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5088"
-      ]
-     },
-     "execution_count": 212,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of instances: 18920\n",
+      "Number of features : 94\n"
+     ]
     }
    ],
    "source": [
-    "(31+30+31+31+28+31+30)*24"
+    "print(f\"Number of instances: {len(df)}\")\n",
+    "print(f\"Number of features : {len(df.columns)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 21,
+   "id": "2a38d431",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Narrow down to the required period\n",
+    "df = df[(df['DATE'] >= '2021-10-01') & (df['DATE'] < '2022-05-01')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8b821d77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of instances within required period: 6691\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of instances within required period: {len(df)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "588fb374",
    "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess(hourly_data):\n",
+    "    '''Extract, clean and unscale the data according to the data \n",
+    "    dictionary provided.'''\n",
+    "    \n",
     "    # Get the hourly weather report type\n",
     "    df = hourly_data.loc[hourly_data['REPORT_TYPE'] == 'FM-15', :]\n",
     "    \n",
     "    # Extract the unscaled values for each column\n",
-    "    df.loc[:,'WND'] = df['WND'].apply(lambda x: int(x.split(',')[-2])/10).replace(999.9, np.nan)\n",
-    "    df.loc[:,'TMP'] = df['TMP'].apply(lambda x: int(x.split(',')[0])/10).replace(999.9, np.nan)\n",
-    "    df.loc[:,'DEW'] = df['DEW'].apply(lambda x: int(x.split(',')[0])/10).replace(999.9, np.nan)\n",
-    "    df.loc[:,'SLP'] = df['SLP'].apply(lambda x: int(x.split(',')[0])/10).replace(9999.9, np.nan)\n",
-    "    df.loc[:,'AA1'] = df['AA1'].apply(lambda x: np.nan if x != x else int(x.split(',')[1])/10).replace(999.9, np.nan)\n",
+    "    df.loc[:,'WND'] = (df['WND'].apply(lambda x: int(x.split(',')[-2])/10)\n",
+    "                                .replace(999.9, np.nan))\n",
     "    \n",
+    "    df.loc[:,'TMP'] = (df['TMP'].apply(lambda x: int(x.split(',')[0])/10)\n",
+    "                                .replace(999.9, np.nan))\n",
+    "    \n",
+    "    df.loc[:,'DEW'] = (df['DEW'].apply(lambda x: int(x.split(',')[0])/10)\n",
+    "                                .replace(999.9, np.nan))\n",
+    "    \n",
+    "    df.loc[:,'SLP'] = (df['SLP'].apply(lambda x: int(x.split(',')[0])/10)\n",
+    "                                .replace(9999.9, np.nan))\n",
     "    \n",
     "    # Impute missing data using data from an hour before\n",
     "    df.ffill(inplace=True)\n",
@@ -115,12 +151,18 @@
     "    processed_data = df.loc[(df['DATE'] <= '2022-05-01') & (df['DATE'] >= '2021-10-01'), :]\n",
     "    \n",
     "    # Extract date and hour from datetime column\n",
-    "    processed_data.loc[:,'DATE'] = pd.to_datetime(processed_data['DATE'])\n",
-    "    processed_data.loc[:,'HOUR'] = processed_data['DATE'].dt.hour\n",
-    "    processed_data.loc[:,'DATE'] = processed_data['DATE'].dt.date\n",
+    "    processed_data.loc[:,'date'] = pd.to_datetime(processed_data['DATE'])\n",
+    "    processed_data.loc[:,'hour'] = processed_data['date'].dt.hour\n",
+    "    processed_data.loc[:,'date'] = processed_data['date'].dt.date\n",
     "    \n",
-    "    return processed_data[['DATE',\n",
-    "                           'HOUR',\n",
+    "    processed_data.rename({'WND':'wind_speed',\n",
+    "                           'TMP':'temperature',\n",
+    "                           'DEW':'dew_point',\n",
+    "                           'SLP':'atmospheric_pressure'})\n",
+    "    \n",
+    "    \n",
+    "    return processed_data[['date',\n",
+    "                           'hour',\n",
     "                           'TMP',\n",
     "                           'DEW',\n",
     "                           'SLP',\n",
@@ -130,36 +172,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
-   "id": "b55eea62",
+   "execution_count": 9,
+   "id": "4341e30e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:1773: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self._setitem_single_column(ilocs[0], value, pi)\n",
-      "/opt/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:5182: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  downcast=downcast,\n",
-      "/opt/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:1667: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self.obj[key] = value\n"
+      "Number of instances we require: 5088\n"
      ]
     }
    ],
    "source": [
+    "print(f\"Number of instances we require: {(31+30+31+31+28+31+30)*24}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b55eea62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df2 = preprocess(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "45141391",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of instances after preprocessing: 5088\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of instances after preprocessing: {len(df2)}\")"
    ]
   },
   {
@@ -169,7 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.to_csv(\"/Users/oliver/Downloads/weather.csv\")"
+    "# Store the data in the curated folder\n",
+    "df2.to_csv(\"../data/curated/hourly_weather.csv\")"
    ]
   },
   {
