Finalised notebooks and fixed weather data download issue.

--- a/notebooks/model.ipynb
+++ b/notebooks/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f768a721",
+   "id": "b1ad7eb4",
    "metadata": {},
    "source": [
     "# Modelling\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5333e151",
+   "id": "8414c6cf",
    "metadata": {},
    "source": [
     "## Import Libraries"
@@ -21,8 +21,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
-   "id": "588ed29b",
+   "execution_count": 586,
+   "id": "ee48a5b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 398,
-   "id": "1466436a",
+   "id": "9d5ebf90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7725d057",
+   "id": "91fcac84",
    "metadata": {},
    "source": [
     "## Split data into training and testing set"
@@ -69,8 +69,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
-   "id": "fd546220",
+   "execution_count": null,
+   "id": "95cf34c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
-   "id": "7f4c121b",
+   "execution_count": null,
+   "id": "91e0442b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdfe5c16",
+   "id": "6dde2a58",
    "metadata": {},
    "source": [
     "## Prepare training and testing data for each borough\n",
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 403,
-   "id": "a557ce67",
+   "id": "cd56be46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 404,
-   "id": "342cf023",
+   "id": "d16cd862",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 405,
-   "id": "92b9be2c",
+   "id": "0f926ee5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 425,
-   "id": "24d42639",
+   "id": "07849384",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 426,
-   "id": "e6daa1fe",
+   "id": "76681551",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "648c37bd",
+   "id": "56f7fee4",
    "metadata": {},
    "source": [
     "## Train and estimate using Linear Regression model on each borough data\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 409,
-   "id": "05b0b6a0",
+   "id": "2dcfe2ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,13 +210,11 @@
     "uniq_dayweek = nyc_hourly_demand['day_of_week'].unique()\n",
     "\n",
     "# Train LinearRegressor on each borough data\n",
-    "lr_equation_1 = ('count ~ C(pu_location_id) + C(month, levels=uniq_month) +'\n",
-    "                 '+ C(day_of_week, levels=uniq_dayweek) +'\n",
-    "                 'C(pickup_hour, levels=uniq_hour) + TMP + DEW + SLP + A + B + C_class + V + ' +\n",
-    "                'S + D + K + O + M + G + W + E + N + P + F + Z + U + Q + H + Y + I + R + J + T + total_lot')\n",
-    "\n",
-    "lr_equation_2 = ('count ~ C(pu_location_id) + C(month, levels=uniq_month) +' +\n",
-    "               'C(day_of_week) + C(pickup_hour, levels=uniq_hour) + TMP + DEW + SLP + D + H + total_lot')\n",
+    "lr_equation_1 = ('count ~ C(pu_location_id) + C(month, levels=uniq_month) +' +\n",
+    "                 '+ C(day_of_week, levels=uniq_dayweek) + C(is_weekday)' +\n",
+    "                 'C(pickup_hour, levels=uniq_hour) + temperature + dew_point + atmospheric_pressure +' +\n",
+    "                 '+ A + B + C_class + V + S + D + K + O + M + G + W + E + N + P + F + Z + U + Q + ' +\n",
+    "                 'H + Y + I + R + J + T + total_lot')\n",
     "\n",
     "\n",
     "borough_lr_model = {bor: ols(lr_equation_1, \n",
@@ -228,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 570,
-   "id": "8bdb002b",
+   "id": "22cfc64f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 571,
-   "id": "37252052",
+   "id": "fb6a980e",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea9576a0",
+   "id": "0e26f9ab",
    "metadata": {},
    "source": [
     "## Train and estimate using Random Forest Regression model on each borough data\n",
@@ -284,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 416,
-   "id": "42866bd1",
+   "id": "573bc34b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a88ac0ce",
+   "id": "4a5a7c95",
    "metadata": {},
    "source": [
     "Due to the long computation time, we decided to tune the hyperparameter using the entire training data instead of spliting into different boroughs. For 5 boroughs, we need to run $5^2*3^3=675$ iterations (including the 5-fold cv) to find the optimal configurations compared to the $135$ iterations if we were to run the GridSearch on the whole training data set. We will therefore use this result to approximate the optimal configurations for each of the model."
@@ -329,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 418,
-   "id": "26d90374",
+   "id": "2abe0c70",
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd010672",
+   "id": "a4297033",
    "metadata": {},
    "source": [
     "Based on our 135 iterations of GridSearchCV, the most optimal hyperparameters for the model is:\n",
@@ -512,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": 572,
-   "id": "bc217df1",
+   "id": "d95e4c9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 573,
-   "id": "f245a84e",
+   "id": "4cd96876",
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6aa07f3c",
+   "id": "8cd67e8e",
    "metadata": {},
    "source": [
     "## Plot the average of predicted daily demand between the two models in April 2022 for Manhattan"
@@ -569,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 574,
-   "id": "bdea89a5",
+   "id": "55701138",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 579,
-   "id": "444d7bff",
+   "id": "310174d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 580,
-   "id": "dcba97dd",
+   "id": "5c5203aa",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 584,
-   "id": "508cdc6b",
+   "id": "ef9806b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 585,
-   "id": "c8353f69",
+   "id": "dbb44608",
    "metadata": {},
    "outputs": [
     {
