--- a/notebooks/Weather datascrape.ipynb
+++ b/notebooks/Weather datascrape.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "7e88df93",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "8df85c22",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "98c0cdb1",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "40110dbd",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "2a38d431",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "8b821d77",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "588fb374",
    "metadata": {},
    "outputs": [],
@@ -158,21 +158,22 @@
     "    processed_data.rename({'WND':'wind_speed',\n",
     "                           'TMP':'temperature',\n",
     "                           'DEW':'dew_point',\n",
-    "                           'SLP':'atmospheric_pressure'})\n",
+    "                           'SLP':'atmospheric_pressure'},\n",
+    "                           axis=1,\n",
+    "                           inplace=True)\n",
     "    \n",
     "    \n",
     "    return processed_data[['date',\n",
     "                           'hour',\n",
-    "                           'TMP',\n",
-    "                           'DEW',\n",
-    "                           'SLP',\n",
-    "                           'AA1']]\n",
+    "                           'temperature',\n",
+    "                           'dew_point',\n",
+    "                           'atmospheric_pressure']]\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "4341e30e",
    "metadata": {},
    "outputs": [
@@ -190,35 +191,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "id": "b55eea62",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:1773: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  self._setitem_single_column(ilocs[0], value, pi)\n",
-      "/opt/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:5182: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  downcast=downcast,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df2 = preprocess(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "id": "45141391",
    "metadata": {},
    "outputs": [
@@ -236,7 +219,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
+   "id": "e91f7ac1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>dew_point</th>\n",
+       "      <th>atmospheric_pressure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8835</th>\n",
+       "      <td>2021-10-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>1021.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8836</th>\n",
+       "      <td>2021-10-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>1022.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8837</th>\n",
+       "      <td>2021-10-01</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14.4</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>1022.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8838</th>\n",
+       "      <td>2021-10-01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>1022.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8839</th>\n",
+       "      <td>2021-10-01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12.8</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>1022.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3871</th>\n",
+       "      <td>2022-04-30</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19.4</td>\n",
+       "      <td>-8.3</td>\n",
+       "      <td>1016.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3872</th>\n",
+       "      <td>2022-04-30</td>\n",
+       "      <td>20</td>\n",
+       "      <td>18.9</td>\n",
+       "      <td>-9.4</td>\n",
+       "      <td>1016.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3873</th>\n",
+       "      <td>2022-04-30</td>\n",
+       "      <td>21</td>\n",
+       "      <td>18.9</td>\n",
+       "      <td>-8.3</td>\n",
+       "      <td>1016.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3874</th>\n",
+       "      <td>2022-04-30</td>\n",
+       "      <td>22</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>-3.9</td>\n",
+       "      <td>1017.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3875</th>\n",
+       "      <td>2022-04-30</td>\n",
+       "      <td>23</td>\n",
+       "      <td>14.4</td>\n",
+       "      <td>-6.1</td>\n",
+       "      <td>1018.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5088 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date  hour  temperature  dew_point  atmospheric_pressure\n",
+       "8835  2021-10-01     0         16.1        6.7                1021.5\n",
+       "8836  2021-10-01     1         16.1        7.2                1022.1\n",
+       "8837  2021-10-01     2         14.4        7.8                1022.4\n",
+       "8838  2021-10-01     3         13.3        7.2                1022.3\n",
+       "8839  2021-10-01     4         12.8        7.8                1022.3\n",
+       "...          ...   ...          ...        ...                   ...\n",
+       "3871  2022-04-30    19         19.4       -8.3                1016.8\n",
+       "3872  2022-04-30    20         18.9       -9.4                1016.9\n",
+       "3873  2022-04-30    21         18.9       -8.3                1016.9\n",
+       "3874  2022-04-30    22         16.1       -3.9                1017.4\n",
+       "3875  2022-04-30    23         14.4       -6.1                1018.1\n",
+       "\n",
+       "[5088 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "9b358476",
    "metadata": {},
    "outputs": [],
