--- a/notebooks/Weather datascrape.ipynb
+++ b/notebooks/Weather datascrape.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "7e88df93",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "8df85c22",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "id": "98c0cdb1",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "40110dbd",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "id": "2a38d431",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "id": "8b821d77",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "588fb374",
    "metadata": {},
    "outputs": [],
@@ -155,25 +155,25 @@
     "    processed_data.loc[:,'hour'] = processed_data['date'].dt.hour\n",
     "    processed_data.loc[:,'date'] = processed_data['date'].dt.date\n",
     "    \n",
-    "    processed_data.rename({'WND':'wind_speed',\n",
-    "                           'TMP':'temperature',\n",
-    "                           'DEW':'dew_point',\n",
-    "                           'SLP':'atmospheric_pressure'},\n",
+    "    processed_data.rename({'WND':'wnd',\n",
+    "                           'TMP':'tmp',\n",
+    "                           'DEW':'dew',\n",
+    "                           'SLP':'atm'},\n",
     "                           axis=1,\n",
     "                           inplace=True)\n",
     "    \n",
     "    \n",
     "    return processed_data[['date',\n",
     "                           'hour',\n",
-    "                           'temperature',\n",
-    "                           'dew_point',\n",
-    "                           'atmospheric_pressure']]\n",
+    "                           'tmp',\n",
+    "                           'dew',\n",
+    "                           'atm']]\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "4341e30e",
    "metadata": {},
    "outputs": [
@@ -191,17 +191,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "id": "b55eea62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py:1773: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_single_column(ilocs[0], value, pi)\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:5182: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  downcast=downcast,\n"
+     ]
+    }
+   ],
    "source": [
     "df2 = preprocess(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "id": "45141391",
    "metadata": {},
    "outputs": [
@@ -219,8 +237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "15e303e7",
+   "execution_count": 38,
+   "id": "7b773b78",
    "metadata": {},
    "outputs": [
     {
@@ -246,9 +264,9 @@
        "      <th></th>\n",
        "      <th>date</th>\n",
        "      <th>hour</th>\n",
-       "      <th>temperature</th>\n",
-       "      <th>dew_point</th>\n",
-       "      <th>atmospheric_pressure</th>\n",
+       "      <th>tmp</th>\n",
+       "      <th>dew</th>\n",
+       "      <th>atm</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -346,23 +364,23 @@
        "</div>"
       ],
       "text/plain": [
-       "            date  hour  temperature  dew_point  atmospheric_pressure\n",
-       "8835  2021-10-01     0         16.1        6.7                1021.5\n",
-       "8836  2021-10-01     1         16.1        7.2                1022.1\n",
-       "8837  2021-10-01     2         14.4        7.8                1022.4\n",
-       "8838  2021-10-01     3         13.3        7.2                1022.3\n",
-       "8839  2021-10-01     4         12.8        7.8                1022.3\n",
-       "...          ...   ...          ...        ...                   ...\n",
-       "3871  2022-04-30    19         19.4       -8.3                1016.8\n",
-       "3872  2022-04-30    20         18.9       -9.4                1016.9\n",
-       "3873  2022-04-30    21         18.9       -8.3                1016.9\n",
-       "3874  2022-04-30    22         16.1       -3.9                1017.4\n",
-       "3875  2022-04-30    23         14.4       -6.1                1018.1\n",
+       "            date  hour   tmp  dew     atm\n",
+       "8835  2021-10-01     0  16.1  6.7  1021.5\n",
+       "8836  2021-10-01     1  16.1  7.2  1022.1\n",
+       "8837  2021-10-01     2  14.4  7.8  1022.4\n",
+       "8838  2021-10-01     3  13.3  7.2  1022.3\n",
+       "8839  2021-10-01     4  12.8  7.8  1022.3\n",
+       "...          ...   ...   ...  ...     ...\n",
+       "3871  2022-04-30    19  19.4 -8.3  1016.8\n",
+       "3872  2022-04-30    20  18.9 -9.4  1016.9\n",
+       "3873  2022-04-30    21  18.9 -8.3  1016.9\n",
+       "3874  2022-04-30    22  16.1 -3.9  1017.4\n",
+       "3875  2022-04-30    23  14.4 -6.1  1018.1\n",
        "\n",
        "[5088 rows x 5 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "id": "9b358476",
    "metadata": {},
    "outputs": [],
